# advent-of-code-2021

./: .gitignore  advent-of-code2021.cabal
src/day01/: part1.hs  part2.hs
src/day02/: part1.hs  part2.hs
src/day03/: part1.hs  part2.hs
src/day04/: part1.hs  part2.hs
src/day05/: part1.hs  part2.hs
src/test/: test.hs
