cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Advent of Code 2021

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Erty Seidohl
maintainer:         ertysdl+github@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable day-5-2
    main-is:          part2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        split,
        containers,

    hs-source-dirs:   src/day05
    default-language: Haskell2010

executable day-5-1
    main-is:          part1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        split,
        containers,

    hs-source-dirs:   src/day05
    default-language: Haskell2010

executable day-4-2
    main-is:          part2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        split,

    hs-source-dirs:   src/day04
    default-language: Haskell2010

executable day-4-1
    main-is:          part1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        split,

    hs-source-dirs:   src/day04
    default-language: Haskell2010

executable day-3-2
    main-is:          part2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        containers,

    hs-source-dirs:   src/day03
    default-language: Haskell2010

executable day-3-1
    main-is:          part1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        containers,

    hs-source-dirs:   src/day03
    default-language: Haskell2010

executable day-2-2
    main-is:          part2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        split,

    hs-source-dirs:   src/day02
    default-language: Haskell2010

executable day-2-1
    main-is:          part1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        split,

    hs-source-dirs:   src/day02
    default-language: Haskell2010

executable day-1-2
    main-is:          part2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,

    hs-source-dirs:   src/day01
    default-language: Haskell2010


executable day-1-1
    main-is:          part1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,

    hs-source-dirs:   src/day01
    default-language: Haskell2010

executable test
    main-is:          test.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,

    hs-source-dirs:   src/test
    default-language: Haskell2010
